# Licensed under the Apache License: http://www.apache.org/licenses/LICENSE-2.0
# For details: https://github.com/nedbat/coverage_pytest_plugin/blob/master/NOTICE.txt

[metadata]
name = coverage_pytest_plugin
version = 0.1
author = Ned Batchelder
author-email = ned@nedbatchelder.com
home-page = https://github.com/nedbat/coverage_pytest_plugin
description = Pytest plugin for coverage.py features
long_description = file:README.rst
license = MIT
license_file = LICENSE.txt

[options]
zip_safe = true
package_dir =
    coverage_pytest_plugin = src
packages = coverage_pytest_plugin
install_requires = unidiff

[options.entry_points]
pytest11 =
    coverage_pytest_plugin = coverage_pytest_plugin.coverage_pytest_plugin
    run_wtw = coverage_pytest_plugin.run_wtw

[sdist]
formats = zip
